--- a/Views/Player/DetailsPlayer.cshtml
+++ b/Views/Player/DetailsPlayer.cshtml
@@ -34,13 +34,6 @@
             @Html.DisplayFor(model => model.birthdate)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.photo_path)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.photo_path)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Team.team_name)
@@ -48,6 +41,21 @@
 
         <dd>
             @Html.DisplayFor(model => model.Team.team_name)
+        </dd>
+
+        <dt>
+            Photo
+        </dt>
+
+        <dd>
+            @if (Model.photo_path == null || String.IsNullOrEmpty(Model.photo_path))
+            {
+                <img width="120" src="@Url.Content("~/fotos/players/no-logo.png")" alt="" />
+            }
+            else
+            {
+                <img width="120" src="@Url.Content("~/fotos/players/" + System.IO.Path.GetFileName(Model.photo_path))" alt="" />
+            }
         </dd>
 
     </dl>
