--- a/Views/Trainer/DetailsTrainer.cshtml
+++ b/Views/Trainer/DetailsTrainer.cshtml
@@ -4,53 +4,37 @@
     ViewBag.Title = "DetailsTrainer";
 }
 
-<h2>DetailsTrainer</h2>
-
 <div>
-    <h4>trainer</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.trainer_name)
-        </dt>
+    <div class="form-group mt-2 mb d-flex align-items-center gap-4">
+        @if (Model.photo_path == null || String.IsNullOrEmpty(Model.photo_path))
+        {
+            <img width="60" src="@Url.Content("~/fotos/coachs/no-logo.png")" alt="" />
+        }
+        else
+        {
+            <img width="60" src="@Url.Content("~/fotos/coachs/" + System.IO.Path.GetFileName(Model.photo_path))" alt="" />
+        }
+        <h4>@Model.trainer_name details</h4>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.trainer_name)
-        </dd>
+    <div class="form-horizontal d-flex flex-column gap-3">
+        <div class="form-group">
+            @Html.LabelFor(model => model.trainer_name, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.EditorFor(model => model.trainer_name, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+        </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.coaching_license)
-        </dt>
+        <div class="form-group">
+            @Html.LabelFor(model => model.coaching_license, "Coaching License", htmlAttributes: new { @class = "control -label col-md-2" })
+            @Html.EditorFor(model => model.coaching_license, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+        </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.coaching_license)
-        </dd>
-
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Team.team_name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Team.team_name)
-        </dd>
-
-        <dt>
-            Photo
-        </dt>
-
-        <dd>
-            @if (Model.photo_path == null || String.IsNullOrEmpty(Model.photo_path))
-            {
-                <img width="120" src="@Url.Content("~/fotos/coachs/no-logo.png")" alt="" />
-            }
-            else
-            {
-                <img width="120" src="@Url.Content("~/fotos/coachs/" + System.IO.Path.GetFileName(Model.photo_path))" alt="" />
-            }
-        </dd>
-    </dl>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Team.team_name, "Team", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.EditorFor(model => model.Team.team_name, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Back to List", "TrainerList")
-</p>
+
+<div class="mt-4">
+    @Html.ActionLink("Back to List", "TrainerList", null, new { @class="btn btn-primary" })
+</div>
