--- a/Views/Team/TeamList.cshtml
+++ b/Views/Team/TeamList.cshtml
@@ -1,13 +1,10 @@
-﻿@using System;
-@using System.IO;
-@using PagedList.Mvc
-@model PagedList.IPagedList<Maio11_Best.Models.Team>
-
-@{
+﻿@{
     ViewBag.Title = "Teams";
+    var isAuthenticated = User.Identity.IsAuthenticated;
 }
 
 <h2>Teams</h2>
+<link href="~/DataTables/datatables.css" rel="stylesheet">
 
 @if (User.Identity.IsAuthenticated)
 {
@@ -18,7 +15,7 @@
 }
 
 
-<table class="table table-responsive table-bordered table-striped">
+<table id="tabela" class="table table-responsive table-bordered table-striped">
     <tr class="text-center">
         <th>Id</th>
         <th>Name</th>
@@ -27,46 +24,65 @@
         <th>Country</th>
         <th></th>
     </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.team_id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.team_name)
-            </td>
-            <td>
-                @if (item.photo_path == null || String.IsNullOrEmpty(item.photo_path))
-                {
-                    <img width="50" src="@Url.Content("~/fotos/teams/no-logo.png")" alt="" />
-                }
-                else
-                {
-                    <img width="50" src="@Url.Content("~/fotos/teams/" + System.IO.Path.GetFileName(item.photo_path))" alt="" />
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.foundation_year)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.country)
-            </td>
-            <td class="actions-row">
-                @Html.ActionLink("Details", "DetailsTeam", new { id = item.team_id }, new { @class = "icon-button btn btn-secondary fa fa-eye" })
-                @if (User.Identity.IsAuthenticated)
-                {
-                    @Html.ActionLink("Edit", "EditTeam", new { id = item.team_id }, new { @class = "icon-button btn btn-primary fa fa-pencil" })
-                    @Html.ActionLink("Delete", "DeleteTeam", new { id = item.team_id }, new { @class = "icon-button btn btn-danger fa fa-trash" })
-                }
-            </td>
-        </tr>
-    }
-
 </table>
 
-<div class="d-flex justify-content-sm-between">
-    @Html.PagedListPager(Model, page => Url.Action("TeamList", "Team", new { page }))
-    <span>Page @(Model.PageNumber > Model.PageCount ? 1 : Model.PageNumber) of @Model.PageCount</span>
-</div>
+
+@section tabela {
+    <script src="~/DataTables/datatables.js"></script>
+    <script>
+        var isAuthenticated = @Html.Raw(Json.Encode(isAuthenticated));
+        $(function () {
+            tabela = $("#tabela").DataTable({
+                "language": {
+                    "lengthMenu": "Exibe _MENU_ Registros por página",
+                    "search": "Procurar",
+                    "zeroRecords": "Nada foi encontrado",
+                    "info": "Exibindo página _PAGE_ de _PAGES_",
+                    "infoEmpty": "Sem registros",
+                    "infoFiltered": "(filtrado de _MAX_ regitros totais)"
+                },
+                "processing": true,    // mostrar a progress bar
+                "filter": true,            // habilita o filtro(search box)
+                "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "Todos"]], //define as opções de paginação
+                "pageLength": 3,      // define o tamanho da página
+                "ajax": {
+                    'url': "/Team/GetTeams",
+                    'type': 'get',
+                    'dataType': 'json'
+
+                },
+                "columns": [
+                    { data: "TeamId", title: "Foto", className: "id-row" },
+                    { data: "TeamName", title: "Name", className: "name-row" },
+                    {
+                        "data": "PhotoPath",
+                        "title": "Photo",
+                        "autowidth": true,
+                        "render": function (data, type, row) {
+                            if (data == null || data == "") {
+                                return '<img width="50" src="@Url.Content("~/fotos/teams/no-logo.png")" alt="No Logo" />';
+                            } else {
+                                return '<img width="50" src="@Url.Content("~/fotos/teams/")' + data + '" alt="Team Logo" />';
+                            }
+                        }
+
+                    },
+                    { data: "FoundationYear", title: "Founded In", className: "year-row" },
+                    { data: "Country", title: "Country", className: "country-row" },
+                    {
+                        data: "TeamId",
+                        className: "actions-row",
+                        render: function (data, type, row) {
+                            let actions = '<a href="@Url.Action("DetailsTeam", "Team")/' + row.TeamId + '" class="icon-button btn btn-secondary fa fa-eye">Details</a>';
+                            if (isAuthenticated) {
+                                actions += ' <a href="@Url.Action("EditTeam", "Team")/' + row.TeamId + '" class="icon-button btn btn-primary fa fa-pencil">Edit</a>';
+                                actions += ' <a href="@Url.Action("DeleteTeam", "Team")/' + row.TeamId + '" class="icon-button btn btn-danger fa fa-trash">Delete</a>';
+                            }
+                            return actions;
+                        }
+                    },
+                ]
+            });
+        });
+    </script>
+}
