--- a/Content/Site.css
+++ b/Content/Site.css
@@ -125,7 +125,7 @@ td {
     border-radius: 50%;
 }
 
-input:read-only, input:read-only:focus {
+input:read-only:not(.btn), input:read-only:focus:not(.btn) {
     background-color: #f0f0f0; /* Light grey background */
     color: #888; /* Grey text color */
     border: 2px solid #ccc; /* Grey border */
@@ -151,31 +151,6 @@ tr {
 	border: 1px solid var(--color1);
 }
 
-.delete-button {
-	background: none !important;
-	transition: 0.2s;
-}
-
-.delete-button:hover {
-	background: #dc3545 !important;
-}
-
-.insert-button {
-	padding: 5px 12px !important;
-}
-
-.edit-button,
-.insert-button {
-	background: none !important;
-	border: 1px solid var(--color1) !important;
-	transition: 0.2s;
-}
-
-.edit-button:hover,
-.insert-button:hover {
-	background-color: var(--color1) !important;
-	border: 1px solid var(--color1-hover) !important;
-}
 
 #search-container {
 	max-width: 500px;
