--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Teams", "TeamList", "Team", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Players", "PlayerList", "Player", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Trainers", "TrainerList", "Trainer", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Coaches", "TrainerList", "Trainer", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
